--- a/package.json
+++ b/package.json
@@ -7,16 +7,15 @@
   "repository": "koajs/s3-cache",
   "dependencies": {
     "fs-cp": "^1.3.0",
-    "knox": "0",
+    "knox": "^0.9.2",
     "on-finished": "^2.2.0",
     "temp-path": "^1.0.0"
   },
   "devDependencies": {
-    "istanbul-harmony": "0",
-    "koa": "0",
-    "mocha": "2",
-    "standardberry": "*",
-    "supertest": "0"
+    "istanbul": "^0.4.2",
+    "koa": "^1.1.2",
+    "mocha": "^2.4.5",
+    "supertest": "^1.2.0"
   },
   "scripts": {
     "lint": "standardberry index.js",
