--- a/package.json
+++ b/package.json
@@ -12,10 +12,11 @@
     "temp-path": "^1.0.0"
   },
   "devDependencies": {
-    "babel-eslint": "^5.0.0",
+    "babel-eslint": "^6.0.0",
     "codecov": "^1.0.0",
     "eslint": "^2.1.0",
-    "eslint-config-jongleberry": "^2.0.0",
+    "eslint-config-jongleberry": "^4.0.0",
+    "eslint-plugin-babel": "^3.2.0",
     "eslint-plugin-promise": "^1.0.8",
     "eslint-plugin-standard": "^1.0.0",
     "istanbul": "^0.4.2",
