--- a/package.json
+++ b/package.json
@@ -6,10 +6,9 @@
   "license": "MIT",
   "repository": "koajs/s3-cache",
   "dependencies": {
-    "fs-cp": "^1.3.0",
-    "knox": "^0.9.2",
-    "on-finished": "^2.2.0",
-    "temp-path": "^1.0.0"
+    "any-promise": "^1.3.0",
+    "aws-sdk": "^2.3.14",
+    "s3-proxy-stream": "^1.0.0"
   },
   "devDependencies": {
     "babel-eslint": "^6.0.0",
